# elementled

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: App.cpp
core/: CMakeLists.txt
core/src/: Constants.cpp  Constants.h  Context.h  Core.cpp  Core.h  Definitions.h  pch.cpp  pch.h
core/src/components/: Components.h  Tile.h
core/src/ecs/: ECSHelper.h  ECSSimple.cpp  ECSSimple.h
core/src/events/: Event.h  EventDispatcher.h  Events.h  GameEventBus.cpp  GameEventBus.h  InputEventBus.cpp  InputEventBus.h  TypeId.h
core/src/math/: Matrix.h  Vec2.h
core/src/resource/: ResourceAllocator.cpp  ResourceAllocator.h
core/src/scenes/: GameScene.cpp  GameScene.h  Scene.cpp  Scene.h
core/src/system/: LevelRenderSystem.cpp  LevelRenderSystem.h  LevelSystem.cpp  LevelSystem.h  MovementCollisionSystem.cpp  MovementCollisionSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  PrimitiveRenderSystem.cpp  PrimitiveRenderSystem.h  System.h
